# nmtui

./: CHANGELOG.md  Cargo.toml  README.md
src/: app.rs  apps.rs  creadentials.rs  main.rs  scan.rs  utils.rs
src/apps/: core.rs  creadentials.rs  handlers.rs
src/apps/core/: delete_handler.rs  event_handlers.rs  help_handlers.rs  run.rs  saved_connection.rs  saved_handler.rs  widget.rs
src/apps/handlers/: flags.rs  password_handler.rs  ssid_handler.rs  status.rs  utils.rs
src/utils/: connect.rs  delete_connection.rs  disconnect_connection.rs  saved_connection.rs  scan.rs  tui.rs
