[package]
name = "nmtui"
version = "1.0.0"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com>"]
description = "Wrapper around nmcli"
license = "MIT"
repository = "https://github.com/santoshxshrestha/nmtui"
homepage = "https://github.com/santoshxshrestha/nmtui"
keywords = ["terminal", "nmcli", "tui", "rust"]
readme = "README.md"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
